[Windows] Windows is incorrectly using a LayerTypeTiledBackingLayer https://bugs.webkit.org/show_bug.cgi?id=119772

Reviewed by Simon Fraser.

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::swapFromOrToTiledLayer): Ensure that we use
the correct (supported) tiled layer type for Windows.
* platform/graphics/ca/win/PlatformCALayerWin.cpp:
(PlatformCALayer::PlatformCALayer): Add an assertion to notify us if
we introduce this mistake again in the future.


Canonical link: https://commits.webkit.org/137719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154030 268f45cc-cd09-0410-ab3c-d52691b4dbfc